Make tests run after porting to hibernate 7